Prevent deep linked content from being hidden behind navigation
Apply scroll margin based on widget margin

--- a/entry_types/scrolled/package/src/frontend/Section.module.css
+++ b/entry_types/scrolled/package/src/frontend/Section.module.css
@@ -7,6 +7,7 @@
 
 .Section {
   position: relative;
+  scroll-margin-top: var(--widget-margin-top);
 
   --section-max-width:
     var(--theme-section-max-width);
